--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
     <div id="birthdayScreen" class="hidden">
         <h1>Feliz Aniversário</h1>
-        <p class="message">Parabéns meu amor, você é muito especial para mim e queria agradecer por você ter aparecido na minha vida, queria lembrar que você é incrível, uma pessoa amável e com seu ar, que muda qual um quando estão ao seu lado, queria lembra que amei conhecer você, mesmo que nós não tenhamos assunto, que não nos falemos muito, e que nos distanciamos, eu amo você, amo essa pessoa que você é, você foi uma das melhores pessoas que apareceram na minha vida, se não tiver sido a melhor, prometo está aqui quando você precisar.
+        <p class="message">Primeiramente queria dizer que eu ainda amo muito você, mesmoestando afastados, se falando pouco e por ai vai, ma independente de tudo, queria te desejar meus parabéns meu amor, não vou mentir, tenho sdds de nó no mesmo lugar, de pertubar você, sdds de nós, você é muito especial para mim e queria agradecer por você ter aparecido na minha vida, queria lembrar que você é incrível, uma pessoa amável e com seu ar, que muda qual um quando estão ao seu lado, queria lembra que amei conhecer você, mesmo que nós não tenhamos assunto, que não nos falemos muito, e que nos distanciamos, eu amo você, amo essa pessoa que você é, você foi uma das melhores pessoas que apareceram na minha vida, se não tiver sido a melhor, prometo está aqui quando você precisar.
 
 E mais uma vez "Feliz Aniversario Princesa".</p>
         <div class="music-link">
