--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 E mais uma vez "Feliz Aniversario Princesa".</p>
         <div class="music-link">
             <a href="https://open.spotify.com/intl-pt/track/6AR3sVRA9MNO07vZoNJur4" target="_blank">
-                <img src="https://i.scdn.co/image/ab67616d0000b273bbf7e554146d9b741e58ef02" alt="Maria - Matuê">
+                <img src="https://i.scdn.co/image/ab67616d0000b273bbf7e554146d9b741e58ef02" alt="Minha MUsica Para Você!">
             </a>
         </div>
         <p class="love-text">Te amo❤️- Ass: Wesley</p>
