--- a/index.html
+++ b/index.html
@@ -98,11 +98,49 @@
     </div>
     <div id="birthdayScreen" class="hidden">
         <h1>Feliz Aniversário</h1>
-        <p class="message">Primeiramente queria dizer que você é muito especial para mim, se falando pouco e por ai vai, ma independente de tudo, queria te desejar meus parabéns meu amor, não vou mentir, tenho sdds de endoidar naquela praça, de pertubar você, sdds de nós, você é muito especial para mim e queria agradecer por você ter aparecido na minha vida, queria lembrar que você é incrível, uma pessoa amável e com seu ar, que muda qualquer com suas loucuras quando estão ao seu lado, queria lembra que amei conhecer você, mesmo que nós não tenhamos assunto, que você me humilhe e que nos distanciamos, eu amo você, amo essa pessoa que você é, você foi uma das melhores pessoas que apareceram na minha vida, se não tiver sido a melhor, prometo está aqui quando você precisar.
+        <p class="message">✨ Nos Olhos Dela, Constelações
+Por alguém que se perdeu no céu dela
 
-E mais uma vez "Feliz Aniversario Princesa".</p>
+Nos olhos dela,
+há algo que o céu inteiro inveja:
+um brilho antigo,
+como se cada estrela tivesse se escondido ali
+pra descansar da eternidade.
+
+Eles não olham,
+eles hipnotizam —
+como Vênus em retrogradação:
+bonitos demais pra serem compreendidos,
+intensos demais pra serem ignorados.
+
+E quando ela sorri…
+É como se Leão abrisse o coração do Sol
+e dissesse:
+“tá tudo bem aquecer o mundo com tua luz”.
+
+Tem riso que é canto,
+mas o dela?
+É mapa astral em risada:
+Sol em brilho,
+Lua em leveza,
+Ascendente em arrepio.
+
+Ela tem Júpiter no olhar e Netuno nos passos,
+viaja mundos sem sair do lugar,
+e ainda assim…
+é impossível não querer segui-la
+como quem segue um cometa
+mesmo sem saber onde vai dar.
+
+E eu?
+Sou só mais um signo perdido,
+tentando achar abrigo
+no universo que ela carrega
+sem perceber..
+
+ Parabens nem, obrigado por me aguentar até aqui, tudp de bom pra você. "Feliz Aniversario Princesa".</p>
         <div class="music-link">
-            <a href="https://open.spotify.com/track/13Rf6RaZT13TW4xLQR3MQr" target="_blank">
+            <a href="https://open.spotify.com/intl-pt/track/51Hgjd6p6uiZc1zwdbAxK7" target="_blank">
                 <img src="https://i.scdn.co/image/ab67616d0000b273bbf7e554146d9b741e58ef02" alt="🤍Musica Para Você🤍">
             </a>
         </div>
