--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ tentando achar abrigo
 no universo que ela carrega
 sem perceber..
 
- Parabens nem, obrigado por me aguentar até aqui, tudp de bom pra você. "Feliz Aniversario Princesa".</p>
+ Parabens nem, sei que não nos falamos muito, mas tou muito feliz por fazer isso pra você, queria poder festejar mas não sou disso, então mais uma vez "Feliz Aniversario Princesa".</p>
         <div class="music-link">
             <a href="https://open.spotify.com/intl-pt/track/51Hgjd6p6uiZc1zwdbAxK7" target="_blank">
                 <img src="https://i.scdn.co/image/ab67616d0000b273bbf7e554146d9b741e58ef02" alt="🤍Musica Para Você🤍">
@@ -168,3 +168,4 @@ sem perceber..
     </script>
 </body>
 </html>
+
