--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ sem perceber..
 
  Parabens nem, sei que não nos falamos muito, mas tou muito feliz por fazer isso pra você, queria poder festejar mas não sou disso, então mais uma vez "Feliz Aniversario Princesa".</p>
         <div class="music-link">
-            <a href="https://open.spotify.com/intl-pt/track/51Hgjd6p6uiZc1zwdbAxK7" target="_blank">
+            <a href="https://open.spotify.com/intl-pt/track/6QlotyGlpPfEX4eGsvbhCh?utm_source=chatgpt.com" target="_blank">
                 <img src="https://i.scdn.co/image/ab67616d0000b273bbf7e554146d9b741e58ef02" alt="🤍Musica Para Você🤍">
             </a>
         </div>
-        <p class="love-text">Te amo❤️- Ass: Wesley</p>
+        <p class="love-text">- Ass: Wesley❤️</p>
     </div>
     <script>
         function startSurprise() {
@@ -168,4 +168,5 @@ sem perceber..
     </script>
 </body>
 </html>
+
 
