--- a/index.html
+++ b/index.html
@@ -1,173 +1,117 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surpresa</title>
+    <title>Cardápio de Drinks</title>
+
     <style>
         body {
+            background: #000; /* fundo totalmente preto */
             margin: 0;
             padding: 0;
-            background-color: black;
-            overflow: hidden;
-            text-align: center;
-            color: white;
             font-family: Arial, sans-serif;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .heart-button {
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 60px;
-            color: red;
-            position: relative;
-        }
-        .heart-button::before {
-            content: '\2764'; /* Unicode para coração */
-            font-size: 120px;
-            display: block;
-        }
-        .heart-button span {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 24px;
-            font-weight: bold;
             color: white;
+            text-align: center;
         }
-        .heart-button:hover {
-            transform: scale(1.1);
-        }
-        .hidden {
-            display: none;
-        }
+
         h1 {
-            font-size: 30px;
-            color: red;
-            text-shadow: 2px 2px 5px white;
-            font-family: 'Comic Sans MS', cursive;
+            margin: 25px 0;
+            color: #fff;
+        }
+
+        /* Imagem principal */
+        .main-cardapio img {
+            width: 90%;
+            max-width: 700px;
+            border-radius: 12px;
             margin-top: 20px;
+            box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.1);
         }
-        .message {
-            font-size: 19px;
-            font-family: 'Dancing Script', cursive;
-            margin: 20px;
+
+        /* Carrossel */
+        .carousel-container {
+            width: 90%;
+            max-width: 700px;
+            margin: 40px auto;
+            overflow: hidden;
+            border-radius: 12px;
         }
-        .music-link {
-            margin-top: 20px;
+
+        .carousel {
+            display: flex;
+            width: 200%; /* duas imagens */
+            animation: slide 8s infinite;
         }
-        .music-link img {
-            width: 150px;
+
+        .carousel img {
+            width: 100%;
+            object-fit: cover;
+        }
+
+        @keyframes slide {
+            0% { transform: translateX(0); }
+            45% { transform: translateX(0); }
+
+            50% { transform: translateX(-100%); }
+            95% { transform: translateX(-100%); }
+
+            100% { transform: translateX(0); }
+        }
+
+        /* Botão WhatsApp */
+        .whatsapp {
+            margin: 50px 0 70px 0;
+        }
+
+        .whatsapp a {
+            display: inline-block;
+            background: #25D366;
+            padding: 15px 30px;
+            color: #000;
+            font-size: 22px;
+            font-weight: bold;
             border-radius: 10px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
+            text-decoration: none;
+            transition: 0.3s;
         }
-        .music-link img:hover {
-            transform: scale(1.1);
-        }
-        .love-text {
-            font-size: 20px;
-            font-family: 'Dancing Script', cursive;
-            margin-top: 20px;
-        }
-        .heart {
-            position: absolute;
-            color: red;
-            font-size: 24px;
-            top: 0;
-            animation: fall linear infinite;
-        }
-        @keyframes fall {
-            from { transform: translateY(0); opacity: 1; }
-            to { transform: translateY(100vh); opacity: 0; }
+
+        .whatsapp a:hover {
+            background: #1ebe5d;
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-    <div class="container" id="startScreen">
-        <button class="heart-button" onclick="startSurprise()">
-            <span>Click Me</span>
-        </button>
+
+    <h1>Nosso Cardápio</h1>
+
+    <!-- IMAGEM PRINCIPAL DO CARDÁPIO -->
+    <div class="main-cardapio">
+        <img src="cardapio1.jpg" alt="Cardápio Principal">
     </div>
-    <div id="birthdayScreen" class="hidden">
-        <h1>Feliz Aniversário</h1>
-        <p class="message">✨ Nos Olhos Dela, Constelações
-Por alguém que se perdeu no céu dela
 
-Nos olhos dela,
-há algo que o céu inteiro inveja:
-um brilho antigo,
-como se cada estrela tivesse se escondido ali
-pra descansar da eternidade.
+    <h1>Explicação dos Drinks</h1>
 
-Eles não olham,
-eles hipnotizam —
-como Vênus em retrogradação:
-bonitos demais pra serem compreendidos,
-intensos demais pra serem ignorados.
-
-E quando ela sorri…
-É como se Leão abrisse o coração do Sol
-e dissesse:
-“tá tudo bem aquecer o mundo com tua luz”.
-
-Tem riso que é canto,
-mas o dela?
-É mapa astral em risada:
-Sol em brilho,
-Lua em leveza,
-Ascendente em arrepio.
-
-Ela tem Júpiter no olhar e Netuno nos passos,
-viaja mundos sem sair do lugar,
-e ainda assim…
-é impossível não querer segui-la
-como quem segue um cometa
-mesmo sem saber onde vai dar.
-
-E eu?
-Sou só mais um signo perdido,
-tentando achar abrigo
-no universo que ela carrega
-sem perceber..
-
- Parabens nem, sei que não nos falamos muito, mas tou muito feliz por fazer isso pra você, queria poder festejar mas não sou disso, então mais uma vez "Feliz Aniversario Princesa".</p>
-        <div class="music-link">
-            <a href="https://open.spotify.com/intl-pt/track/2FGhB10Gon36GgFcOTMQEW?utm_source=chatgpt.com" target="_blank">
-                <img src="https://i.scdn.co/image/ab67616d0000b273bbf7e554146d9b741e58ef02" alt="🤍Musica Para Você🤍">
-            </a>
+    <!-- CARROSSEL DE IMAGENS -->
+    <div class="carousel-container">
+        <div class="carousel">
+            <img src="drink1.jpg" alt="Drink 1">
+            <img src="drink2.jpg" alt="Drink 2">
         </div>
-        <p class="love-text">- Ass: Wesley❤️</p>
     </div>
-    <script>
-        function startSurprise() {
-            document.getElementById('startScreen').classList.add('hidden');
-            document.getElementById('birthdayScreen').classList.remove('hidden');
-            startHearts();
-        }
-        function startHearts() {
-            function createHeart() {
-                const heart = document.createElement('div');
-                heart.classList.add('heart');
-                heart.innerHTML = '❤️';
-                heart.style.left = Math.random() * 100 + 'vw';
-                heart.style.top = '-30px';
-                heart.style.animationDuration = Math.random() * 3 + 2 + 's';
-                document.body.appendChild(heart);
-                setTimeout(() => heart.remove(), 5000);
-            }
-            setInterval(createHeart, 300);
-        }
-    </script>
+
+    <!-- CONTATO WHATSAPP -->
+    <div class="whatsapp">
+        <a href="https://wa.me/5599999999999" target="_blank">
+            Orçamento
+        </a>
+    </div>
+
 </body>
 </html>
+
+
 
 
 
