--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardápio de Drinks</title>
+    <title>Cardápio de Drinks do Gosth</title>
 
     <style>
         body {
@@ -91,7 +91,7 @@
         <img src="cardapio1.jpg" alt="Cardápio Principal">
     </div>
 
-    <h1>Explicação dos Drinks</h1>
+    <h1>História Sobre os Drinks</h1>
 
     <!-- CARROSSEL DE IMAGENS -->
     <div class="carousel-container">
@@ -104,12 +104,13 @@
     <!-- CONTATO WHATSAPP -->
     <div class="whatsapp">
         <a href="https://wa.me/5599999999999" target="_blank">
-            Orçamento
+            Clique Aqui Para Orçamento
         </a>
     </div>
 
 </body>
 </html>
+
 
 
 
