--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 
         .carousel img {
     width: 100%;
-    height: auto;        /* mantém proporção automaticamente */
-    max-height: 300px;   /* você pode aumentar ou diminuir */
-    object-fit: contain; /* garante que nunca vai deformar */
-};
+max-width: 700px;
+margin: auto;
+}
         }
 
         @keyframes slide {
@@ -113,6 +112,7 @@
 
 </body>
 </html>
+
 
 
 
