--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <style>
         body {
-            background: #000; /* fundo totalmente preto */
+            background: #000;
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
@@ -29,22 +29,163 @@
             box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.1);
         }
 
-        /* Carrossel */
+        /* CARROSSEL */
         .carousel-container {
             width: 90%;
             max-width: 700px;
             margin: 40px auto;
             overflow: hidden;
+            position: relative;
             border-radius: 12px;
         }
 
         .carousel {
             display: flex;
-            width: 200%; /* duas imagens */
-            animation: slide 15s infinite;
+            transition: transform 0.5s ease-in-out;
         }
 
         .carousel img {
+            width: 100%;
+            max-height: 320px;
+            object-fit: contain;
+            background: #111;
+            padding: 10px;
+            border-radius: 12px;
+        }
+
+        /* BOTÕES DO CARROSSEL */
+        .btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(255,255,255,0.2);
+            border: none;
+            color: white;
+            font-size: 25px;
+            cursor: pointer;
+            padding: 10px 15px;
+            border-radius: 50%;
+            backdrop-filter: blur(4px);
+            transition: 0.3s;
+        }
+
+        .btn:hover {
+            background: rgba(255,255,255,0.35);
+        }
+
+        .btn-left { left: 5px; }
+        .btn-right { right: 5px; }
+
+        /* BOTÃO WHATSAPP NORMAL */
+        .whatsapp {
+            margin: 50px 0 70px 0;
+        }
+
+        .whatsapp a {
+            display: inline-block;
+            background: #25D366;
+            padding: 15px 30px;
+            color: #000;
+            font-size: 22px;
+            font-weight: bold;
+            border-radius: 10px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+
+        .whatsapp a:hover {
+            background: #1ebe5d;
+            transform: scale(1.05);
+        }
+
+        /* BOTÃO FLUTUANTE DO WHATSAPP */
+        .whatsapp-float {
+            position: fixed;
+            bottom: 25px;
+            right: 25px;
+            background: #25D366;
+            width: 65px;
+            height: 65px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 0 15px rgba(0,0,0,0.4);
+            z-index: 999;
+            transition: 0.3s;
+        }
+
+        .whatsapp-float img {
+            width: 40px;
+        }
+
+        .whatsapp-float:hover {
+            transform: scale(1.12);
+            background: #1ebe5d;
+        }
+
+    </style>
+</head>
+<body>
+
+    <h1>Nosso Cardápio</h1>
+
+    <!-- IMAGEM PRINCIPAL -->
+    <div class="main-cardapio">
+        <img src="cardapio1.jpg" alt="Cardápio Principal">
+    </div>
+
+    <h1>História Sobre os Drinks</h1>
+
+    <!-- CARROSSEL -->
+    <div class="carousel-container">
+        <button class="btn btn-left" onclick="prev()">❮</button>
+
+        <div class="carousel" id="carousel">
+            <img src="drink1.jpg" alt="Drink 1">
+            <img src="drink2.jpg" alt="Drink 2">
+        </div>
+
+        <button class="btn btn-right" onclick="next()">❯</button>
+    </div>
+
+    <!-- WHATSAPP NORMAL -->
+    <div class="whatsapp">
+        <a href="https://wa.me/5586995956108" target="_blank">
+            Clique Aqui Para Orçamento
+        </a>
+    </div>
+
+    <!-- BOTÃO FLUTUANTE -->
+    <a class="whatsapp-float" href="https://wa.me/5586995956108" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+    </a>
+
+    <script>
+        let index = 0;
+        const carousel = document.getElementById("carousel");
+        const total = carousel.children.length;
+
+        function updateCarousel() {
+            const width = carousel.children[0].clientWidth;
+            carousel.style.transform = `translateX(${-index * width}px)`;
+        }
+
+        function next() {
+            index = (index + 1) % total;
+            updateCarousel();
+        }
+
+        function prev() {
+            index = (index - 1 + total) % total;
+            updateCarousel();
+        }
+
+        window.addEventListener('resize', updateCarousel);
+    </script>
+
+</body>
+</html>
     width: 150%;
 max-width: 750px;
 margin: auto;
@@ -112,6 +253,7 @@ margin: auto;
 
 </body>
 </html>
+
 
 
 
