--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </head>
 <body>
 
-    <h1>Nosso Cardápio</h1>
+    <h1>Nosso Cardápio, aqui você encontra meu cardápio para qualquer festividade!</h1>
 
     <!-- IMAGEM PRINCIPAL -->
     <div class="main-cardapio">
@@ -184,3 +184,4 @@
 </body>
     </html>
     
+
