--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             color: #fff;
         }
 
+        h2 {
+            margin: 25px 0;
+            color: #fff;
+        }
+        
         /* Imagem principal */
         .main-cardapio img {
             width: 90%;
@@ -122,7 +127,9 @@
 </head>
 <body>
 
-    <h1>Nosso Cardápio, aqui você encontra meu cardápio para qualquer festividade!</h1>
+    <h1>Nosso Cardápio!</h1>
+
+    <h2>Aqui você encontra meu cardápio para qualquer festividade!</h2>
 
     <!-- IMAGEM PRINCIPAL -->
     <div class="main-cardapio">
@@ -184,4 +191,5 @@
 </body>
     </html>
     
+
 
